<resources>
    <string name="app_name">Class Activity 1</string>

    <string name="button_nextPage">Next Page</string>

    <string name="button_search">Search</string>
    <string name="textView_title">My Ice Cream Store</string>
    <string name="search_hint">Search by name...</string>

    <string name="textView_priceRange">Price Range</string>
    <string name="textView_to">to</string>
    <string name="hint_from">from</string>
    <string name="hint_to">to</string>

    <string name="textView_dairy">Contain Dairy?</string>
    <string name="textView_allergy">Allergy Information?</string>

    <string name="checkbox_eggs">Eggs</string>
    <string name="checkbox_peanuts">Peanuts</string>
    <string name="checkbox_wheat">Wheat</string>
    <string name="checkbox_soy">Soy</string>


</resources>