<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/grey"
        android:text="@string/button_search"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_title"
            android:textSize="22sp"
            android:textStyle="bold" />

        <SearchView
            android:id="@+id/search_byName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="-10dp"
            android:layout_weight="1"
            android:iconifiedByDefault="false"
            android:lineSpacingExtra="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="-20dp"
            android:paddingEnd="-25dp"
            android:queryHint="@string/search_hint"
            android:scaleX=".7"
            android:scaleY=".7" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_searchSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_header"
        app:layout_constraintVertical_bias="0.499">


        <LinearLayout
            android:id="@+id/linearLayout_priceRange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_priceRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:text="@string/textView_priceRange" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:hint="@string/hint_from"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/textView_to" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:hint="@string/hint_to"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout_dairy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_dairy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_dairy" />

            <Switch
                android:id="@+id/switch_dairy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                tools:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_allergy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_allergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_allergy" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox_eggs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/checkbox_eggs"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/checkBox_peanuts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey"
                    android:checked="true"
                    android:minWidth="0dp"

                    android:minHeight="0dp"
                    android:text="@string/checkbox_peanuts"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/checkBox_wheat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey"
                    android:checked="true"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/checkbox_wheat"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/checkBox_soy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey"
                    android:checked="true"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/checkbox_soy"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>